# eveng-mcp

./: .env.example  .gitignore  Dockerfile  PRODUCTION_READY_SUMMARY.md  README.md  audit_eveng_apis.py  cli_test_results.json  comprehensive_cli_test.py  debug_eveng_api_detailed.py  debug_node_details.py  direct_test_results.json  final_comprehensive_test.py  final_test_results.json  main.py  pyproject.toml  test_get_lab_debug.py  test_list_labs_direct.py  test_mcp_http.py  test_mcp_tools_direct.py  test_results.json  test_socat_bridge.py
config/: production.json
deployment/systemd/: eveng-mcp-server.service
docs/: README.md
docs/api/: README.md
docs/deployment/: README.md
docs/integrations/: README.md  claude-desktop.md  vscode.md
docs/troubleshooting/: README.md
eveng_mcp_server/: __init__.py  cli.py  server.py
eveng_mcp_server/config/: __init__.py  logging.py  settings.py
eveng_mcp_server/core/: __init__.py  eveng_client.py  exceptions.py
eveng_mcp_server/prompts/: __init__.py  workflows.py
eveng_mcp_server/resources/: __init__.py  dynamic.py  static.py
eveng_mcp_server/tools/: __init__.py  connection.py  lab_management.py  network_management.py  node_management.py
examples/integrations/: claude-desktop-config.json  deploy_lab.py  sample-lab.json  vscode-workspace.json
scripts/: verify_production_ready.py
tests/: README.md  conftest.py  requirements.txt  run_tests.py
tests/e2e/: comprehensive_api_test.py
tests/fixtures/: comprehensive_test_summary.md  create_lab_args.json  test_connect_args.json
tests/integration/: direct_api_test.py  run_mcp_tests.sh  test_lab_integration.sh  working_demo.py
tests/legacy/: debug_eveng_api.py  test_lab_creation.py
tests/unit/: test_client.py  test_mcp_client.py
